--- a/biodata/main.css
+++ b/biodata/main.css
@@ -23,6 +23,10 @@ button{
 	font-family: 'Poppins', sans-serif;
 	font-weight: bold;
 }
+a{
+	text-decoration: none;
+	color: inherit;
+}
 
 #header{
 	width: 100vw;
